--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Open Sans', Arial, sans-serif;
   font-weight: bold;
-  color: #000000;
+  color: #FFFFFF;
   text-transform: uppercase;
   font-size: 14px;
   padding-left: 5px;
