--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,24 @@ body {
   color: #FFFFFF;
   text-transform: uppercase;
   font-size: 14px;
-  padding-left: 5px;
+
+  padding: 5px 5px 5px 5px;
   overflow: hidden;
+}
+
+.container {
+  position: relative;
+}
+
+.content {
+  width: 100%;
+  position: absolute;
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+#stackedrightContent {
+  right: 0;
 }
